# devpy-cli

./: .gitignore  CHANGELOG.md  README.md  app.py  backend.py  config_manager.py  frontend_cli.py  permissions_config_manager.py  permissions_manager.py  pyproject.toml  ruff.toml  security_audit.py  setup_wizard.py  ssh_key_manager.py  tests_permissions.py
.github/workflows/: publish.yml
docs/: index.html
llm/: chatgpt.py  claude.py  deepseek.py  google.py  ollama.py
