[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devpy-cli"
version = "1.0.0"
description = "AI-powered DevOps CLI Assistant for local and remote Docker management"
readme = "README.md"
authors = [{ name = "Eddy Ortega", email = "atrox390@gmail.com" }]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: System :: Systems Administration",
  "Topic :: Software Development :: Build Tools",
]
dependencies = [
  "docker>=7.0.0",
  "paramiko>=3.4.0",
  "cryptography>=42.0.0",
  "rich>=13.7.0",
  "langchain>=0.1.0",
  "langchain-openai>=0.0.5",
  "langgraph>=0.0.10",
  "python-dotenv>=1.0.0",
  "psutil>=5.9.0",
]
requires-python = ">=3.11"

[project.scripts]
devpy-cli = "app:run_cli"

[project.urls]
"Homepage" = "https://github.com/your-username/devpy-cli"
"Bug Tracker" = "https://github.com/your-username/devpy-cli/issues"

[tool.setuptools]
py-modules = [
  "app",
  "backend",
  "frontend_cli",
  "permissions_manager",
  "permissions_config_manager",
  "config_manager",
  "ssh_key_manager",
]
